chore: better username verification, fix window sizing