@@ -1,2 +1,20 @@
 # Chat
 
+## Client
+A JavaFX application which runs on JDK17+.
+
+### Launching
+Linux/MacOS: `./gradlew :Client:run`
+
+Windows: `gradlew.bat :Client:run`
+
+## Server
+Ideally runs on JDK21+ (or JDK 19/20 with `--enable-preview`) but JDK 17+ works.
+
+### Launching
+Linux/MacOS: `./gradlew :Server:run`
+
+Windows: `gradlew.bat :Server:run`
+
+## License
+Licensed under the Apache License, version 2.0. See [LICENSE](./LICENSE) for more information.
